templates/resource-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sresourcelimits
spec:
  crd:
    spec:
      names:
        kind: K8sResourceLimits
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sresourcelimits

        violation[{"msg": msg}] {
          container := get_containers(input.review.object)[_]
          not container.resources.limits
          msg := "Resource limits must be defined"
        }

        violation[{"msg": msg}] {
          container := get_containers(input.review.object)[_]
          not container.resources.requests
          msg := "Resource requests must be defined"
        }

        get_containers(obj) = containers {
          containers := obj.spec.containers
        } else = containers {
          containers := obj.spec.template.spec.containers
        }
